# entropy

./: .gitignore  README.md  pyproject.toml
entropypilot/: color_universe.py  config.py  demo.ipynb  demo_sync.ipynb  main.py  simulation.py  test.py
entropypilot/utils/: color.py
