[project]
name = "entropypilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "tiktoken>=0.12.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
